--- a/style.css
+++ b/style.css
@@ -137,12 +137,14 @@ Author URI: http://maxmalm.se
 	
 	/*--- HEADER ---*/
 
-        #noncontent { position: fixed; top: 75px; left: 25px; width: 300px; padding: 10px; background: #000; background: rgba(0,0,0,0.8); }
+        #noncontent { position: fixed; top: 75px; left: 25px; width: 300px; padding: 10px; background: #000; background: rgba(0,0,0,0.8); z-index: 1 }
 
         .notportfolio { width: 100%; padding-left: 350px; margin-top: 75px; padding-bottom: 150px; }
         .isportfolio { padding-left: 350px; }
+        .isportfolio article { margin-right: 20px; }
 
-		#site-header #site-title { }
+
+#site-header #site-title { }
 		#site-header #site-description {  }	
 
 		/* Nav */
@@ -189,10 +191,20 @@ Author URI: http://maxmalm.se
 
 	/*--- FOOTER ---*/
 
-		#footer {  clear: both; text-align: right; position: fixed; bottom: 0; left: 0; right: 0;}
+		#footer { display:none; clear: both; text-align: right; position: fixed; bottom: 0; left: 0; right: 0;}
 			
 		/* Credit */
 		#footer #site-credits a { letter-spacing: 1px; }
+
+    /*--- PORTFOLIO ---*/
+
+        .portfolioimage { position: relative; width: 100%; max-height:100%; }
+        .portfolioimage h2 { position: absolute; bottom: 25px; left: 0; width: 100%; background: #000; background: rgba(0,0,0,0.7); font-size: 24px; }
+        .portfolioimage h2 a { text-decoration: none; color: #fff; }
+        .portfolioimage h2 span { color: white; font: bold 24px/45px Helvetica, Sans-Serif; letter-spacing: -1px; }
+
+        .portfoliotext { display: none; position: absolute; top: 25px; left: 25px; right: 25px; background: #000; background: rgba(0,0,0,0.7); color: #fff; padding: 25px; }
+        .portfolioimage:hover .portfoliotext {display: block;}
 
 
 /*--------------------------------------------------------------------------------------------------*/
